chore: Update npm dependencies, add react-icons package, and refactor code

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,6 +1,15 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
 
+:root {
+  --ion-color-favorite: #69bb7b;
+  --ion-color-favorite-rgb: 105, 187, 123;
+  --ion-color-favorite-contrast: #ffffff;
+  --ion-color-favorite-contrast-rgb: 255, 255, 255;
+  --ion-color-favorite-shade: #5ca56c;
+  --ion-color-favorite-tint: #78c288;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,3 +23,4 @@ http://ionicframework.com/docs/theming/ */
   font-family: "EloquiaLight";
   src: url(/assets/fonts/EloquiaDisplay-ExtraLight.otf) format("opentype");
 }
+
