chore: Update Home page with camera functionality and optimized imports

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -15,3 +15,9 @@ http://ionicframework.com/docs/theming/ */
   src: url(/assets/fonts/EloquiaDisplay-ExtraLight.otf) format("opentype");
 }
 
+
+body,
+html
+ {
+  background-color: transparent !important;
+}
