--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,11 +1,22 @@
 
+.cameraLoader {
+    position: absolute !important;
+    top: 200px;
+    width: 80%;
+    height: 20%;
+    border-radius: 25px;
+    box-shadow: 0px 0 0 600px rgba(0, 0, 0, 1);
 
+}
 .cameraPreview {
-position: relative !important;
+    position: absolute !important;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 50%;
-    border-radius: 25px;
-    box-shadow: 0 0 0 1000px rgba(0, 0, 0, 1);
+    z-index: 20;
+}
+
+
+body.camera-active {
+    --background: transparent;
+    --ion-background-color: transparent;
 }
