--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,17 +1,18 @@
 
 .cameraLoader {
     position: absolute !important;
-    top: 200px;
-    width: 80%;
-    height: 20%;
+    top: 20%;
+    width: 90%;
+    height: 40%;
     border-radius: 25px;
-    box-shadow: 0px 0 0 600px rgba(0, 0, 0, 1);
-
+    box-shadow: 0 0 0 600px rgba(0, 0, 0, 1);
+    left: 5%;
 }
 .cameraPreview {
     position: absolute !important;
     top: 0;
     left: 0;
+    justify-content: center;
     z-index: 20;
 }
 
