--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,10 +1,11 @@
-/* .cameraLoader {
-  position: relative !important;
-  width: 80%;
-  height: 60%;
-  border-radius: 20px;
-  box-shadow: 0 0 0 600px rgba(0, 0, 0, 1);
-} */
+.cameraLoader {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  position: fixed;
+  background-color: black;
+}
 
 body.camera-active {
   --background: transparent;
