chore: Update toolbar background color to #121212

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -14,3 +14,7 @@ http://ionicframework.com/docs/theming/ */
   font-family: "EloquiaLight";
   src: url(/assets/fonts/EloquiaDisplay-ExtraLight.otf) format("opentype");
 }
+
+ion-toolbar {
+  --background: #121212;
+}
