--- a/src/pages/camera.css
+++ b/src/pages/camera.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   display: flex;
   position: fixed;
-  background-color: black;
+  background-color: #121212;
 }
 
 body.camera-active {
